2784. Про внесення змін до деяких законодавчих актів України щодо протидії незаконному обігу наркотичних засобів, психотропних речовин і прекурсорів та зловживанню ними

--- a/Закони/Про_наркотичні_засоби,_психотропні_речовини_і_прекурсори.md
+++ b/Закони/Про_наркотичні_засоби,_психотропні_речовини_і_прекурсори.md
@@ -417,9 +417,9 @@
 
 Пересилання наркотичних засобів, психотропних речовин і прекурсорів у поштових (у тому числі міжнародних) відправленнях забороняється. Пересилання наркотичних засобів, психотропних речовин і прекурсорів як гуманітарної допомоги забороняється, за винятком випадків надзвичайного стану, якщо наркотичні засоби, психотропні речовини і прекурсори направляються у відповідні регіони України за окремим рішенням Кабінету Міністрів України.
 
-**Стаття 27.** Придбання, реалізація наркотичних засобів, психотропних речовин і прекурсорів
+**Стаття 27.** Придбання, відпуск наркотичних засобів, психотропних речовин і прекурсорів або їх аналогів
 
-Придбання наркотичних засобів і психотропних речовин, включених до таблиць II і III Переліку, фізичною особою за медичними показаннями здійснюється лише за рецептом лікаря.
+Придбання наркотичних засобів і психотропних речовин, включених до таблиць II і III Переліку, фізичною особою за медичними показаннями здійснюється лише за електронним рецептом лікаря. Електронний рецепт створюється, зберігається та передається через інформаційну (інформаційно-телекомунікаційну) систему, доступ до якої надається уповноваженим особам суб’єкта господарювання, що здійснюють виписування електронного рецепта, та уповноваженим особам суб’єкта господарювання, що здійснюють відпуск лікарського засобу за електронним рецептом відповідно до вимог чинного законодавства у сфері електронного документообігу, електронного цифрового підпису та захисту інформації в інформаційно-телекомунікаційних системах.
 
 Придбання прекурсорів, включених до таблиці IV Переліку, фізичною особою за медичними показаннями здійснюється в порядку, встановленому центральним органом виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я, за погодженням із центральним органом виконавчої влади, що забезпечує формування державної політики у сфері обігу наркотичних засобів, психотропних речовин, їх аналогів і прекурсорів, протидії їх незаконному обігу.
 
@@ -427,15 +427,13 @@
 
 Контроль за обігом наркотичних засобів, психотропних речовин, включених до таблиць II і III Переліку, та прекурсорів, включених до таблиці IV Переліку, в закладах охорони здоров'я здійснюють спеціальні комісії, утворені згідно з порядком, встановленим центральним органом виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я, за погодженням із центральним органом виконавчої влади, що забезпечує формування державної політики у сфері обігу наркотичних засобів, психотропних речовин, їх аналогів і прекурсорів, протидії їх незаконному обігу.
 
-Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я, визначає максимальні строки призначення наркотичних засобів і психотропних речовин, включених до таблиць II і III Переліку, а також кількість наркотичного засобу чи психотропної речовини, яка може приписуватися за одним рецептом.
+Центральний орган виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я, визначає максимальні строки призначення наркотичних засобів і психотропних речовин, включених до таблиць II і III Переліку, а також кількість наркотичного засобу чи психотропної речовини, яка може приписуватися за одним електронним рецептом.
 
-**Стаття 28.** Рецепти на наркотичні засоби і психотропні речовини
+**Стаття 28.** Електронні рецепти на наркотичні засоби і психотропні речовини
 
-Рецепти на наркотичні засоби, психотропні речовини, включені до таблиць II і III Переліку, виписуються на спеціальних бланках.
+Електронні рецепти на наркотичні засоби, психотропні речовини. прекурсори або їх аналоги, включені до таблиць II і III Переліку, виписуються уповноваженою на те в інформаційній (інформаційно-телекомунікаційній) системі суб’єкта господарювання особою. 
 
-Форма спеціальних бланків рецептів, порядок їх реєстрації, обліку і зберігання, а також правила їх оформлення встановлюються центральним органом виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я, за погодженням із центральним органом виконавчої влади, що забезпечує формування державної політики у сфері обігу наркотичних засобів, психотропних речовин, їх аналогів і прекурсорів, протидії їх незаконному обігу.
-
-Видача рецептів на наркотичні засоби або психотропні речовини без відповідних медичних показань або з порушенням встановлених правил оформлення забороняється.
+Видача електронних рецептів на наркотичні засоби або психотропні речовини, прекурсори або їх аналоги без відповідних медичних показань або з порушенням встановлених правил забороняється.
 
 **Стаття 29.** Порядок обігу прекурсорів, включених до таблиці IV Переліку
 
