--- a/Кодекси/Кодекс_України_про_адміністративні_правопорушення/Кодекс_України_про_адміністративні_правопорушення_2.md
+++ b/Кодекси/Кодекс_України_про_адміністративні_правопорушення/Кодекс_України_про_адміністративні_правопорушення_2.md
@@ -418,13 +418,11 @@
 
 **Стаття 44-1.** Ухилення від медичного огляду чи медичного обстеження
 
-Ухилення особи, хворої на наркоманію, від медичного огляду на наявність наркотичного сп'яніння -
-
-тягне за собою накладення штрафу від десяти до двадцяти п'яти неоподатковуваних мінімумів доходів громадян.
-
-Ухилення особи, яка зловживає наркотичними засобами або психотропними речовинами, від медичного обстеження -
-
+Ухилення особи, від медичного обстеження на предмет встановлення факту зловживання наркотичними засобами або психотропними речовинами чи наявність наркотичного сп’яніння -
 тягне за собою накладення штрафу від двадцяти п'яти до п'ятдесяти неоподатковуваних мінімумів доходів громадян.
+
+Ухилення особи, хворої на наркоманію, від медичного огляду на наявність наркотичного сп'яніння -
+тягне за собою накладення штрафу від десяти до двадцяти п'яти неоподатковуваних мінімумів доходів громадян.
 
 **Стаття 44-2.** Порушення обмежень, встановлених для медичних і фармацевтичних працівників під час здійснення ними професійної діяльності
 
@@ -3925,6 +3923,15 @@
 Умисне порушення встановленого законом обмеження щодо строку перебування дитини за межами України у разі самостійного вирішення питання про тимчасовий виїзд дитини за межі України тим із батьків, з яким рішенням суду визначено або висновком органу опіки та піклування підтверджено місце проживання цієї дитини, -
 
 тягне за собою накладення штрафу від ста до двохсот неоподатковуваних мінімумів доходів громадян.
+
+Ухилення батьків або осіб, які їх замінюють, від виконання передбачених законодавством обов’язків щодо направлення дитини на медичне обстеження або медичний огляд на встановлення факту вживання наркотичних чи психотропних засобів чи створення штучних умов, що перешкоджають проведенню огляду дитини -
+
+тягне за собою попередження або накладення штрафу від двохсот до трьохсот неоподатковуваних мінімумів доходів громадян.
+
+
+Ті самі дії, вчинені повторно протягом року після накладення адміністративного стягнення за порушення, передбачені частиною восьмою цієї статті, -
+
+тягнуть за собою накладення штрафу у розмірі від трьохсот до чотирьохсот неоподатковуваних мінімумів доходів громадян.
 
 ### Глава 15
 ### АДМІНІСТРАТИВНІ ПРАВОПОРУШЕННЯ, ЩО ПОСЯГАЮТЬ НА ВСТАНОВЛЕНИЙ ПОРЯДОК УПРАВЛІННЯ
