--- a/Кодекси/Кримінальний_кодекс_України.md
+++ b/Кодекси/Кримінальний_кодекс_України.md
@@ -1110,9 +1110,9 @@
 
 1. Підставами для застосування до юридичної особи заходів кримінально-правового характеру є:
 
-    1) вчинення її уповноваженою особою від імені та в інтересах юридичної особи будь-якого із злочинів, передбачених у статтях 209 і 306, частинах першій і другій статті 368-3, частинах першій і другій статті 368-4, статтях 369 і 369-2 цього Кодексу;
+    1) вчинення її уповноваженою особою від імені та в інтересах юридичної особи будь-якого із злочинів, передбачених у статтях 209 і 306, частинах другій і третій статті 320, частинах першій і другій статті 368-3, частинах першій і другій статті 368-4, статтях 369 і 369-2 цього Кодексу;
 
-    2) незабезпечення виконання покладених на її уповноважену особу законом або установчими документами юридичної особи обов’язків щодо вжиття заходів із запобігання корупції, що призвело до вчинення будь-якого із злочинів, передбачених у статтях 209 і 306, частинах першій і другій статті 368-3, частинах першій і другій статті 368-4, статтях 369 і 369-2 цього Кодексу;
+    2) незабезпечення виконання покладених на її уповноважену особу законом або установчими документами юридичної особи обов’язків щодо вжиття заходів із запобігання корупції, що призвело до вчинення будь-якого із злочинів, передбачених у статтях 209 і 306, частинами другою і третьою статті 320, частинах першій і другій статті 368-3, частинах першій і другій статті 368-4, статтях 369 і 369-2 цього Кодексу;
 
     3) вчинення її уповноваженою особою від імені юридичної особи будь-якого із злочинів, передбачених у статтях 258-258-5 цього Кодексу;
 
@@ -1159,6 +1159,10 @@
     3) ліквідація.
 
 2. До юридичних осіб штраф та ліквідація можуть застосовуватися лише як основні заходи кримінально-правового характеру, а конфіскація майна - лише як додатковий. При застосуванні заходів кримінально-правового характеру юридична особа зобов’язана відшкодувати нанесені збитки та шкоду в повному обсязі, а також розмір отриманої неправомірної вигоди, яка отримана або могла бути отримана юридичною особою.
+
+3. Санкцією статті Особливої частини цього Кодексу може бути передбачено конкретний вид і розмір заходів кримінально-правового характеру, що застосовуються до юридичних осіб.
+
+    В такому разі застосовується той вид і розмір заходів кримінально- правового характеру, що застосовуються до юридичних осіб, який передбачено санкцією конкретної статті Особливої частини цього Кодексу.
 
 **Стаття 96-7.** Штраф
 
@@ -4108,11 +4112,11 @@
 
 2. Ті самі дії, вчинені повторно або за попередньою змовою групою осіб, або особою, яка раніше вчинила один із злочинів, передбачених статтями 308-310, 312, 314, 315, 317 цього Кодексу, або із залученням неповнолітнього, а також збут наркотичних засобів, психотропних речовин або їх аналогів у місцях, що призначені для проведення навчальних, спортивних і культурних заходів, та в інших місцях масового перебування громадян, або збут чи передача цих речовин у місця позбавлення волі, або якщо предметом таких дій були наркотичні засоби, психотропні речовини або їх аналоги у великих розмірах чи особливо небезпечні наркотичні засоби або психотропні речовини, -
 
-караються позбавленням волі на строк від шести до десяти років з конфіскацією майна.
+караються позбавленням волі на строк від восьми до дванадцяти років з конфіскацією майна.
 
 3. Дії, передбачені частинами першою або другою цієї статті, вчинені організованою групою, а також якщо предметом таких дій були наркотичні засоби, психотропні речовини або їх аналоги в особливо великих розмірах, або вчинені із залученням малолітнього або щодо малолітнього, -
 
-караються позбавленням волі на строк від дев'яти до дванадцяти років з конфіскацією майна.
+караються позбавленням волі на строк від дванадцяти до п’ятнадцяти років з конфіскацією майна.
 
 4. Особа, яка добровільно здала наркотичні засоби, психотропні речовини або їх аналоги і вказала джерело їх придбання або сприяла розкриттю злочинів, пов'язаних з їх незаконним обігом, звільняється від кримінальної відповідальності за незаконне їх виробництво, виготовлення, придбання, зберігання, перевезення, пересилання (частина перша цієї статті, частина перша статті 309 цього Кодексу).
 
@@ -4224,6 +4228,18 @@
 
 карається позбавленням волі на строк від п'яти до дванадцяти років.
 
+**Стаття 315-1.** Пропаганда або реклама наркотичних засобів, психотропних речовин або їх прекурсорів
+
+1. Пропаганда або реклама наркотичних засобів, психотропних речовин або їх прекурсорів, нарковмісних рослин, або їх частин, що містять наркотичні засоби або психотропні речовини, або їх прекурсори, в інформаційно-телекомунікаційних мережах (включаючи мережу Інтернет) або в громадських місцях (у тому числі на фасадах будинків, дорожньому покритті, інших об’єктах міської інфраструктури) шляхом поширення зображень, цифрових знаків та (або) назв, штрих та скан-кодів, веб-адрес, аккаунтів у соціальних мережах та месенджерах (в тому числі іноземними мовами), а також пропаганда відомостей про засоби та методи їх розробки, виготовлення, культивування чи використання, місця їх придбання, опис будь-яких переваг у використанні окремих наркотичних засобів, психотропних речовин, їх аналогів або прекурсорів, наркотичних рослин або їх частин, що містять наркотичні засоби, або психотропні речовини, або їх прекурсори -
+карається штрафом від трьох до п’яти тисяч неоподатковуваних мінімумів доходів громадян або позбавленням волі на строк від двох до п'яти років.
+
+2. Ті самі дії, вчинені повторно або особою, яка раніше вчинила один із злочинів, передбачених статтями 307, 310, 314, 315, 317, 318 цього Кодексу, -
+караються позбавленням волі на строк від п'яти до семи років.
+
+*Примітка. 1.* За дії, передбачені частиною другою цієї статті, до юридичної особи, уповноваженою особою якої вчинено злочин, судом застосовуються заходи кримінально-правового характеру у вигляді штрафу у розмірі від двадцяти до п'ятдесяти тисяч неоподатковуваних мінімумів доходів громадян.
+
+2. Дія цієї статті не розповсюджується на випадки розміщення відомостей про наркотичні засоби, психотропні речовини та їх прекурсори у спеціалізованих наукових виданнях, у науково-методичній та навчальній літературі, яка розроблена відповідно до змісту освітніх програм та затверджена закладами вищої освіти (науковими установами) у встановленому порядку, розповсюдження інформації на наукових семінарах, конференціях, симпозіумах та інших заходах наукового-практичного характеру.
+
 **Стаття 316.** Незаконне публічне вживання наркотичних засобів
 
 1. Публічне або вчинене групою осіб незаконне вживання наркотичних засобів у місцях, що призначені для проведення навчальних, спортивних і культурних заходів, та в інших місцях масового перебування громадян -
@@ -4266,13 +4282,22 @@
 
 **Стаття 320.** Порушення встановлених правил обігу наркотичних засобів, психотропних речовин, їх аналогів або прекурсорів
 
-1. Порушення встановлених правил посіву або вирощування снотворного маку чи конопель, а також порушення правил виробництва, виготовлення, зберігання, обліку, відпуску, розподілу, торгівлі, перевезення, пересилання чи використання наркотичних засобів, психотропних речовин, їх аналогів або прекурсорів, призначених для виробництва чи виготовлення цих засобів чи речовин, -
+1. Порушення встановлених правил посіву або вирощування снотворного маку чи конопель, а також порушення правил виробництва, виготовлення, зберігання, обліку, відпуску, розподілу, торгівлі, перевезення, пересилання чи використання наркотичних засобів, психотропних речовин, їх аналогів або прекурсорів, призначених для виробництва чи виготовлення цих засобів чи речовин, - караються штрафом від двохсот до двохсот п’ятдесяти неоподатковуваних мінімумів доходів громадян або арештом на строк до шести місяців, або обмеженням волі на строк до чотирьох років, або позбавленням волі на строк до трьох років, з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
 
-караються штрафом до сімдесяти неоподатковуваних мінімумів доходів громадян або арештом на строк до шести місяців, або обмеженням волі на строк до чотирьох років, або позбавленням волі на строк до трьох років, з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
+2. Ті самі дії, вчинені повторно, або якщо вони спричинили нестачу наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів у великих розмірах, або призвели до викрадення, привласнення, вимагання наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів або заволодіння ними шляхом шахрайства чи зловживання службовою особою своїм службовим становищем, - караються штрафом від двохсот п'ятдесяти до п'ятисот неоподатковуваних мінімумів доходів громадян або арештом на строк від трьох до шести місяців, або позбавленням волі на строк від трьох до п'яти років, з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
 
-2. Ті самі дії, вчинені повторно, або якщо вони спричинили нестачу наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів у великих розмірах, або призвели до викрадення, привласнення, вимагання наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів або заволодіння ними шляхом шахрайства чи зловживання службовою особою своїм службовим становищем, -
+**Стаття 320-1.** Порушення встановлених правил відпуску, розміщення та торгівлі наркотичними засобами, психотропними речовинами, прекурсорами або їх аналогами 
 
-караються штрафом від сімдесяти до ста двадцяти неоподатковуваних мінімумів доходів громадян або арештом на строк від трьох до шести місяців, або позбавленням волі на строк від трьох до п'яти років, з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
+1. Порушення встановлених правил відпуску, торгівлі наркотичними засобами, психотропними речовинами, прекурсорами або їх аналогами, призначеними для виробництва чи виготовлення цих засобів чи речовин, у тому числі відпуск чи торгівля цими засобами з аптек та аптечних пунктів без наявності електронного рецепта, створеного у передбаченому законодавством порядку, -
+караються штрафом від п'яти до семи тисяч неоподатковуваних мінімумів доходів громадян з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
+
+*Примітка.* За дії, передбачені частиною першою цієї статті, до юридичної особи, уповноваженою особою якої вчинено злочин, судом застосовуються заходи кримінально-правового характеру у вигляді штрафу у розмірі від десяти тисяч до двадцяти тисяч неоподатковуваних мінімумів доходів громадян.
+
+2. Дії, передбачені частиною першою цієї статті, вчинені повторно, або якщо вони спричинили нестачу наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів у великих розмірах, або призвели до викрадення, привласнення, вимагання наркотичних засобів, психотропних речовин, їх аналогів чи прекурсорів або заволодіння ними шляхом шахрайства чи зловживання службовою особою своїм службовим становищем, -
+караються штрафом від десяти до дванадцяти тисяч неоподатковуваних мінімумів доходів громадян або позбавленням волі на строк від п'яти до семи років, з позбавленням права обіймати певні посади чи займатися певною діяльністю на строк до трьох років.
+
+*Примітка.* За дії, передбачені частиною другою цієї статті, до юридичної особи, уповноваженою особою якої вчинено злочин, судом застосовуються заходи кримінально-правового характеру у вигляді штрафу у розмірі від двадцяти до п'ятдесяти тисяч неоподатковуваних мінімумів доходів громадян.
+
 
 **Стаття 321.** Незаконне виробництво, виготовлення, придбання, перевезення, пересилання, зберігання з метою збуту або збут отруйних чи сильнодіючих речовин або отруйних чи сильнодіючих лікарських засобів
 
