--- a/Кодекси/Цивільний_процесуальний_кодекс_України/Цивільний_процесуальний_кодекс_України_4.md
+++ b/Кодекси/Цивільний_процесуальний_кодекс_України/Цивільний_процесуальний_кодекс_України_4.md
@@ -467,6 +467,33 @@
 
 4. Якщо під час судового засідання особа заявляє про застосування до неї насильства під час примусової госпіталізації або, незалежно від наявності заяви особи, якщо її зовнішній вигляд, стан чи інші відомі судді обставини дають підстави для обґрунтованої підозри порушення вимог законодавства під час примусової госпіталізації, суддя зобов’язаний забезпечити невідкладне проведення судово-медичного обстеження особи та надіслати відповідному органу досудового розслідування окрему ухвалу щодо необхідності проведення дослідження фактів застосування насильства та вжиття необхідних заходів для забезпечення безпеки особи згідно із законодавством.
 
+### Глава 10-1 Розгляд судом справ про направлення на примусове лікування особи, хворої на наркоманію
+
+**Стаття 342-1.** Підсудність
+
+1. Заява про направлення на примусове лікування особи, хворої на наркоманію, або про продовження строку примусової госпіталізації такої особи подається до суду за місцезнаходженням спеціалізованого лікувального закладу органів охорони здоров'я, або до суду за місцем виявлення такого хворого.
+
+**Стаття 342-2.** Зміст заяви
+
+1. У заяві про направлення на примусове  лікування від наркоманії або про продовження строку примусової госпіталізації такої особи мають бути зазначені встановлені законом підстави для такої госпіталізації. До заяви додається мотивований медичний висновок про необхідність направлення особи на примусове лікування від наркоманії або про продовження строку примусової госпіталізації, в якому зазначається строк, протягом якого буде проведено лікування.
+
+**Стаття 342-3.** Розгляд справи
+
+1. Справи про направлення на примусове лікування особи, хворої на наркоманію, або про продовження строку примусової госпіталізації суд розглядає не пізніше п’яти днів після відкриття провадження у справі. Особі має бути надано право особистої участі в судовому засіданні.
+
+2. Участь у розгляді справи особи, за заявою якої відкрито провадження у справі, представника особи, стосовно якої вирішується питання про примусову госпіталізацію або про продовження строку примусової госпіталізації, є обов’язковою.
+
+3. За ініціативою суду або за клопотанням сторін до суду можуть бути викликані члени (член) медичної комісії, які проводили медичне обстеження хворого на наркоманію і склали медичний висновок про необхідність направлення його на примусову госпіталізацію або про продовження строку примусової госпіталізації. 
+
+
+**Стаття 342-4.** Рішення суду
+
+1. Розглянувши заяву про направлення на примусове лікування особи, хворої на наркоманію, або про продовження строку примусової госпіталізації такої особи суд ухвалює відповідне рішення.
+
+2. Рішення про задоволення заяви, зазначеної у частині першій цієї статті, підлягає негайному виконанню та є підставою для примусової госпіталізації особи в спеціалізований лікувальний заклад на встановлений законом строк. 
+
+3. Після набрання законної сили рішенням суду про примусову госпіталізацію до спеціалізованого  лікувального закладу суд надсилає рішення відповідному органу місцевого самоврядування для вжиття заходів щодо охорони майна особи, стосовно якої ухвалено рішення суду.
+
 ### Глава 11. Розгляд судом справ про примусову госпіталізацію до протитуберкульозного закладу
 
 **Стаття 343.** Підсудність
