2778. Про внесення змін до деяких законів України щодо ціноутворення та тарифів на електричну енергію для споживачів, які постійно проживають в 30-кілометровій зоні атомних електростанцій

--- a/Закони/Про_використання_ядерної_енергії_та_радіаційну_безпеку.md
+++ b/Закони/Про_використання_ядерної_енергії_та_радіаційну_безпеку.md
@@ -258,7 +258,7 @@
 
 * створення та підтримання у справному стані об’єктів спеціальної соціальної інфраструктури, у тому числі захисних споруд, призначених для укриття і захисту населення, техніки та майна від дії радіаційного опромінення у разі радіаційної аварії. Забезпечення засобами індивідуального захисту та препаратами стабільного йоду у межах отриманих коштів відповідно до медичних нормативів у порядку, встановленому Кабінетом Міністрів України;
 
-* пільги з оплати за спожиту електричну енергію для населення, яке постійно проживає в 30-кілометровій зоні атомних електростанцій, відповідно до статті 17 Закону України "Про електроенергетику". Порядок компенсації збитків енергопостачальних компаній встановлюється органом державного регулювання діяльності в енергетиці відповідно до повноважень, визначених Законом України "Про електроенергетику";
+* пільги з оплати за спожиту електричну енергію для населення, яке постійно проживає в 30-кілометровій зоні атомних електростанцій, відповідно до пункту 6-1 частини першої статті 7 Закону України "Про ринок електричної енергії. Порядок компенсації збитків електропостачальникам, які виконують зобов’язання щодо надання універсальної послуги, встановлюється центральним органом виконавчої влади, що здійснює державне регулювання, моніторинг та контроль за діяльністю суб’єктів господарювання у сферах енергетики та комунальних послуг відповідно до повноважень, визначених Законом України "Про ринок електричної енергії";
 
 * виконання заходів з поліпшення умов проживання та праці населення, яке мешкає на означених територіях, у межах отриманих коштів за напрямами, передбаченими програмами економічного і соціального розвитку відповідних адміністративно-територіальних одиниць, що затверджуються органами місцевого самоврядування (обласними, районними, міськими радами міст обласного підпорядкування, міськими радами монофункціональних міст-супутників), на територію яких поширюються відповідні зони згідно із законами України "Про державне прогнозування та розроблення програм економічного і соціального розвитку України" та "Про місцеве самоврядування в Україні", крім коштів Державного фонду поводження з радіоактивними відходами, порядок використання яких встановлюється Кабінетом Міністрів України.
 
