--- a/Закони/Про_ринок_електричної_енергії.md
+++ b/Закони/Про_ринок_електричної_енергії.md
@@ -642,6 +642,8 @@
 
     6) ціни на допоміжні послуги у випадках, передбачених статтею 69 цього Закону;
 
+        6-1. Ціни (тарифи) на універсальні послуги для побутових споживачів, які постійно проживають у 30-кілометровій зоні атомних електростанцій, встановлюються у розмірі 70 відсотків діючого тарифу для відповідної групи населення.
+
     7) ставки плати за приєднання потужності та ставки плати за лінійну частину приєднання;
 
     8) "зелені" тарифи;
@@ -2606,6 +2608,8 @@
     1) надання універсальних послуг вразливим споживачам відповідно до законодавства у порядку, визначеному Кабінетом Міністрів України;
 
     2) надання оператору системи передачі послуги із забезпечення збільшення частки виробництва електричної енергії з альтернативних джерел енергії.
+
+    3) надання універсальних послуг для побутових споживачів, які постійно проживають у 30-кілометровій зоні атомних електростанцій.
 
 **Стаття 64.** Постачальник "останньої надії"
 
