2761.Про внесення змін до Кодексу цивільного захисту України (щодо удосконалення здійснення заходів державного нагляду (контролю) у сфері техногенної та пожежної безпеки)

--- a/Кодекси/Кодекс_цивільного_захисту_України.md
+++ b/Кодекси/Кодекс_цивільного_захисту_України.md
@@ -99,6 +99,8 @@
 
     43) техногенна безпека - відсутність ризику виникнення аварій та/або катастроф на потенційно небезпечних об’єктах, а також у суб’єктів господарювання, що можуть створити реальну загрозу їх виникнення. Техногенна безпека характеризує стан захисту населення і територій від надзвичайних ситуацій техногенного характеру. Забезпечення техногенної безпеки є особливою (специфічною) функцією захисту населення і територій від надзвичайних ситуацій.
 
+    44) об’єкт – будинок, будівля, споруда, в тому числі які будуються, будь-якого призначення та форми власності їх комплекси та/або частини і територія на яких вони розташовані. Об’єкти, що належать одному власнику (перебувають у користуванні), але за територіальною ознакою мають різні фактичні адреси місцезнаходження, вважаються різними об’єктами.
+
 **Стаття 3.** Правова основа цивільного захисту
 
 1. Правовою основою цивільного захисту є Конституція України, цей Кодекс, інші закони України, а також акти Президента України та Кабінету Міністрів України.
@@ -1597,7 +1599,7 @@
 
 1. Діяльність із забезпечення техногенної безпеки є складовою виробничої, експлуатаційної та іншої діяльності відповідних посадових осіб і працівників підприємств, установ, організацій. Ця вимога відображається у відповідних статутах або положеннях.
 
-2. Забезпечення техногенної безпеки суб’єкта господарювання покладається на його керівника.
+2. Забезпечення техногенної безпеки покладається на власника та керівника підприємства, установи, організації, а щодо фізичних осіб –  підприємців особисто.
 
 3. Забезпечення техногенної безпеки під час проектування, будівництва об’єктів, будівель і споруд покладається на орган архітектури, замовників, забудовників, проектні та будівельні організації.
 
@@ -1633,7 +1635,7 @@
 
 2. Діяльність із забезпечення пожежної безпеки є складовою виробничої та іншої діяльності посадових осіб і працівників підприємств, установ та організацій. Зазначена вимога відображається у трудових договорах (контрактах), статутах та положеннях.
 
-3. Забезпечення пожежної безпеки суб’єкта господарювання покладається на власників та керівників таких суб’єктів господарювання.
+3. Забезпечення пожежної безпеки покладається на власника, керівника підприємства, установи, організації, а щодо фізичних осіб –  підприємців особисто.
 
 4. Повноваження у сфері пожежної безпеки асоціацій, корпорацій, концернів, інших господарських об’єднань визначаються їхніми статутами або договорами між суб’єктами господарювання, що утворили об’єднання. Для виконання делегованих об’єднанню функцій у його апараті створюється служба пожежної безпеки.
 
@@ -1780,18 +1782,20 @@
 **Стаття 65.** Державні органи та суб’єкти господарювання, аварійно-рятувальні служби, щодо яких здійснюються заходи державного нагляду (контролю) у сфері техногенної та пожежної безпеки, цивільного захисту
 
 1. Центральний орган виконавчої влади, який здійснює державний нагляд у сфері техногенної та пожежної безпеки, здійснює державний нагляд (контроль) з питань, які визначені частиною першою статті 64 цього Кодексу щодо:
-
-    1) центральних органів виконавчої влади, Ради міністрів Автономної Республіки Крим, місцевих державних адміністрацій, інших державних органів та органів місцевого самоврядування;
-
-    2) суб’єктів господарювання;
-
-    3) аварійно-рятувальних служб.
-
-2. У суб’єктів господарювання приватної форми власності органи державного нагляду у сфері цивільного захисту контролюють виконання заходів щодо захисту населення та працівників на випадок надзвичайної ситуації, а також вирішення питань техногенної та пожежної безпеки, що стосуються прав та інтересів інших юридичних осіб і громадян.
+    
+    1) міністерств, інших центральних органів виконавчої влади, Ради міністрів Автономної Республіки Крим, місцевих державних адміністрацій, інших державних органів та органів місцевого самоврядування;
+    
+    2) юридичних осіб та інших суб’єктів господарювання всіх організаційно-правових форм власності, у тому числі суб’єктів некомерційного господарювання;
+    
+    3) громадян України, іноземців та осіб без громадянства, які здійснюють господарську діяльність, та проводять некомерційне господарювання;»
+    
+    4)  аварійно-рятувальних служб.
 
 **Стаття 66.** Способи здійснення державного нагляду (контролю)
 
-1. Центральний орган виконавчої влади, який здійснює державний нагляд у сфері техногенної та пожежної безпеки, здійснює державний нагляд (контроль) шляхом проведення планових та позапланових перевірок відповідно до закону.
+1. Центральний орган виконавчої влади, який здійснює державний нагляд у сфері техногенної та пожежної безпеки, здійснює державний нагляд (контроль) шляхом проведення планових та позапланових перевірок об’єктів.
+
+2. Планові та позапланові перевірки об’єктів здійснюються відповідно до цього Кодексу, інших законодавчих актів та у порядку встановленому Кабінетом Міністрів України.
 
 **Стаття 67.** Повноваження центрального органу виконавчої влади, який здійснює державний нагляд у сфері техногенної та пожежної безпеки
 
