2759. Про внесення змін до Кримінального кодексу України (щодо посилення відповідальності за надання неправдивих свідчень про участь особи у виконанні завдань антитерористичної операції та операції об'єднаних сил)

--- a/Кодекси/Кримінальний_кодекс_України.md
+++ b/Кодекси/Кримінальний_кодекс_України.md
@@ -5305,9 +5305,7 @@
 
 **Стаття 384.** Введення в оману суду або іншого уповноваженого органу
 
-1. Завідомо неправдиве показання свідка, потерпілого, завідомо неправдивий висновок експерта, складені для надання або надані органу, що здійснює досудове розслідування, виконавче провадження, суду, Вищій раді правосуддя, тимчасовій слідчій чи спеціальній тимчасовій слідчій комісії Верховної Ради України, подання завідомо недостовірних або підроблених доказів, завідомо неправдивий звіт оцінювача про оцінку майна, а також завідомо неправильний переклад, зроблений перекладачем у таких самих випадках, -
-
-караються виправними роботами на строк до двох років або арештом на строк до шести місяців, або обмеженням волі на строк до двох років.
+1. Завідомо неправдиве показання свідка, потерпілого, завідомо неправдивий висновок експерта, складені для надання або надані органу, що здійснює досудове розслідування, виконавче провадження, суду, Вищій раді правосуддя, тимчасовій слідчій чи спеціальній тимчасовій слідчій комісії Верховної Ради України, подання завідомо недостовірних або підроблених доказів, завідомо неправдивий звіт оцінювача про оцінку майна, завідомо неправильний переклад, зроблений перекладачем у таких самих випадках, а також складені для надання або надані органу, що приймає рішення про надання статусу учасника бойових дій, завідомо неправдивих свідчень про період безпосередньої участі особи у виконанні завдань антитерористичної операції та операції об’єднаних сил в районах їх проведення.
 
 2. Ті самі дії, поєднані з обвинуваченням у тяжкому чи особливо тяжкому злочині, або зі штучним створенням доказів обвинувачення чи захисту, а також вчинені з корисливих мотивів, -
 
