2724. Про внесення змін до розділу VIІІ "Прикінцеві та перехідні положення" Закону України "Про збір та облік єдиного внеску на загальнообов'язкове державне соціальне страхування" щодо реструктуризації заборгованості із сплати платежів з єдиного внеску на загальнообов'язкове державне соціальне страхування

--- a/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
@@ -1027,6 +1027,24 @@
 
 Платнику, який відповідно до укладеного договору в повному обсязі погасить заборгованість із страхових внесків і не допустить виникнення нової заборгованості із сплати єдиного внеску на загальнообов'язкове державне соціальне страхування за період дії такого договору, штраф та пеня, пов'язані з цією заборгованістю, нараховані і не сплачені або ті, які підлягають нарахуванню відповідно до Закону України "Про загальнообов'язкове державне пенсійне страхування" та Закону України "Про збір та облік єдиного внеску на загальнообов'язкове державне соціальне страхування", списуються в порядку, встановленому Пенсійним фондом України".
 
+7-2. 
+
+1) Платникам, які протягом трьох місяців з дня набрання чинності Законом України “Про внесення змін до розділу VIII “Прикінцеві та перехідні положення” Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування” щодо реструктуризації заборгованості із  сплати платежів з єдиного внеску на загальнообов’язкове державне соціальне страхування” подали заяву до відповідного органу уповноваженого здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування‚ надається право на розстрочення сум заборгованості із сплати страхових внесків, які не погашені на день укладення договору про розстрочення сум заборгованості із сплати страхових внесків, за період до 31 грудня 2019 р., у разі якщо на день подання заяви у платника немає заборгованості із сплати єдиного внеску на загальнообов’язкове державне соціальне страхування.
+
+2) Суми заборгованості із сплати страхових внесків, які не погашені на день укладення зазначеного договору, розстрочуються та підлягають сплаті рівними частинами протягом 24 календарних місяців починаючи з місяця подання платником заяви до відповідного органу уповноваженого здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування.
+
+    Штраф та пеня, пов’язані з цією заборгованістю, які підлягають нарахуванню відповідно до Закону України “Про загальнообов’язкове державне пенсійне страхування” та Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування”, в період договору не нараховуються,
+
+3) Заяви, подані платником, що надійшли пізніше трьохмісячного строку з дня набрання чинності Законом України “Про внесення змін до розділу VIII “Прикінцеві та перехідні положення” Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування” щодо реструктуризації заборгованості із  сплати платежів з єдиного внеску на загальнообов’язкове державне соціальне страхування”, не розглядаються.
+
+4) Орган уповноважений здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування. у тижневий строк з дня отримання заяви приймає рішення про розстрочення сум заборгованості та укладає з платником договір про розстрочення сум заборгованості із сплати страхових внесків за формою, затвердженою центральним органом виконавчої влади уповноваженим здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування.
+
+    Зазначений договір підлягає достроковому розірванню, якщо платник не сплачує в повному обсязі розстрочені платежі із сплати страхових внесків та/або поточні платежі з єдиного внеску.
+
+5) Платнику, який відповідно до укладеного договору достроково, але не пізніше 12 місяців з дня укладення договору, в повному обсязі погасить заборгованість із страхових внесків і не допустить виникнення нової заборгованості із сплати єдиного внеску на загальнообов’язкове державне соціальне страхування за період дії такого договору, штраф та пеня, пов’язані з цією заборгованістю, нараховані і не сплачені  відповідно до Закону України “Про загальнообов’язкове державне пенсійне страхування” та Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування”, списуються в порядку, встановленому центральним органом виконавчої влади уповноваженим здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування.”
+
+6) Платнику, який відповідно до укладеного договору  в повному обсязі погасить заборгованість із страхових внесків і не допустить виникнення нової заборгованості із сплати єдиного внеску на загальнообов’язкове державне соціальне страхування за період дії такого договору, штраф та пеня, пов’язані з цією заборгованістю, нараховані і не сплачені відповідно до Закону України “Про загальнообов’язкове державне пенсійне страхування” та Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування”, списуються в розмірі 50 відсотків в порядку, встановленому центральним органом виконавчої влади уповноваженим здійснювати державну політику в сфері загальнообов'язкового державного соціального страхування.
+
 8. Державний реєстр загальнообов'язкового державного соціального страхування формується на базі системи персоніфікованого обліку внесків на загальнообов'язкове державне пенсійне страхування.
 
 9. Прийняття законів про запровадження загальнообов'язкового державного соціального медичного страхування та накопичувальної системи загальнообов'язкового державного пенсійного страхування здійснюється одночасно з внесенням відповідних змін до цього Закону.
